--- a/MovieLibraryApplication/ContextExample.csproj
+++ b/MovieLibraryApplication/ContextExample.csproj
@@ -4,10 +4,20 @@
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="Data\Context.cs" />
+    <Compile Remove="Data\IContext.cs" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.1" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
     <PackageReference Include="NReco.Logging.File" Version="1.1.4" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MovieLibraryEntities\MovieLibraryEntities.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Data\" />
   </ItemGroup>
 </Project>
