--- a/MovieLibraryEntities/MovieLibraryEntities.csproj
+++ b/MovieLibraryEntities/MovieLibraryEntities.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="appsettings.json" />
     <None Remove="Migrations\Data\1-InsertGenres.sql" />
     <None Remove="Migrations\Data\2-InsertMovies.sql" />
     <None Remove="Migrations\Data\3-InsertOccupations.sql" />
@@ -25,6 +26,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Data\1-InsertGenres.sql">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
@@ -70,12 +74,6 @@
     <EmbeddedResource Include="Migrations\Data\6-9-InsertRatings.sql">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="appsettings.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
 
   <ItemGroup>
