--- a/MovieLibraryEntities/appsettings.json
+++ b/MovieLibraryEntities/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "MovieContext": "Server=bitsql.wctc.edu;Database=Mod11MovieLibraryv1.3_10023_aframke;User ID=username;Password=password;"
+    "MovieContext": "Server=bitsql.wctc.edu;Database=Mod11MovieLibraryv1.3_10023_aframke;User ID=aframke;Password=000578547;"
   }
 }
